--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+#?? ?? ?? ??(?? info)
+logging.level.root=info
 
+#hello.spring ???? ? ?? ?? ?? ?? (trace -> debug -> info -> warn -> error)
+logging.level.hello.springmvc=debug
