feat : HTTP 응답 - 정적 리소스, 뷰 템플릿

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ logging.level.root=info
 
 #hello.spring ???? ? ?? ?? ?? ?? (trace -> debug -> info -> warn -> error)
 logging.level.hello.springmvc=debug
+
+# auto bean ?? (setting = default) ????? ???? ?
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
