add : 설명 주석 추가
- 사용되지 않는 주석, 코드 정리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#?? ?? ?? ??(?? info)
+# all log setting(basic info)
 logging.level.root=info
 
-#hello.spring ???? ? ?? ?? ?? ?? (trace -> debug -> info -> warn -> error)
+# hello.spring package and under of log level setting (trace -> debug -> info -> warn -> error)
 logging.level.hello.springmvc=debug
 
-# auto bean ?? (setting = default) ????? ???? ?
+# auto bean add (setting = default)-> add when I need
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
